tests/snapshots/regression-implants-set_skills_0.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(text, skills, edit)"
---
ship/type                                    = Punisher
ship/maxTargetsCharacter                     = 0.000000
ship/upgradeFree                             = 400.000000
ship/scanStrength                            = 10.000000
ship/passiveShieldEffectiveRechargeRate      = 1.931034
ship/passiveShieldRechargeRate               = 1.400000
ship/ehp                                     = 2292.426838
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.162500
ship/armorKineticDamageEffectiveResonance    = 0.187500
ship/armorExplosiveDamageEffectiveResonance  = 0.200000
ship/armorEmDamageEffectiveResonance         = 0.125000
ship/shieldEhp                               = 482.758615
ship/hullEhp                                 = 671.641774
ship/armorEhp                                = 1138.026449
ship/shieldDamageEffectiveResonance          = 0.725000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.675000
ship/powerFree                               = 67.000000
ship/cpuFree                                 = 140.000000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 100.000000
ship/capacitorPeakDelta                      = 6.250000
ship/capacitorPeakRecharge                   = 6.250000
ship/alignTime                               = 4.784102
ship/armorHP                                 = 768.167850
ship/shipBonusAF                             = 0.000000
ship/shipBonus2AF                            = 0.000000
ship/shipBonusGC                             = 0.000000
ship/shipBonusCC                             = 0.000000
ship/shipBonusMB                             = 0.000000
ship/shipBonusCB                             = 0.000000
ship/shipBonusAB                             = 0.000000
ship/shipBonusMI                             = 0.000000
ship/shipBonusAI                             = 0.000000
ship/shipBonusCI                             = 0.000000
ship/shipBonusGI                             = 0.000000
ship/shipBonusUF1                            = 0.000000
ship/shipBonusUF2                            = 0.000000
ship/shipBonusUC1                            = 0.000000
ship/shipBonusUC2                            = 0.000000
ship/shipBonusUB1                            = 0.000000
ship/shipBonusUB2                            = 0.000000
ship/shipBonusOreDestroyer1                  = 0.000000
ship/shipBonusOreDestroyer2                  = 0.000000
ship/shipBonusOreDestroyer3                  = 0.000000
ship/shipBonusSoEECS1                        = 0.000000
ship/shipBonusSoEECS2                        = 0.000000
ship/shipBonusSoEECS3                        = 0.000000
ship/shipBonusSoEECS4                        = 0.000000
ship/shipBonusSoEECS5                        = 0.000000
ship/shipBonusAB3                            = 0.000000

character/charisma     = 4.000000
character/intelligence = 4.000000
character/memory       = 4.000000
character/perception   = 4.000000
character/willpower    = 4.000000

implant_1/type         = High-grade Amulet Alpha
implant_1/state        = offline
implant_1/armorHpBonus = 3.017035

implant_2/type         = High-grade Amulet Beta
implant_2/state        = offline
implant_2/armorHpBonus = 6.034071

implant_4/type         = High-grade Amulet Delta
implant_4/state        = offline
implant_4/armorHpBonus = 12.068142

implant_5/type         = High-grade Amulet Epsilon
implant_5/state        = offline
implant_5/armorHpBonus = 15.085177

implant_3/type         = High-grade Amulet Gamma
implant_3/state        = offline
implant_3/armorHpBonus = 9.051106

implant_6/type  = High-grade Amulet Omega
implant_6/state = offline

ship                                = skill Amarr Frigate needs 1 has 0
ship                                = skill Spaceship Command needs 1 has 0
implant_1/High-grade Amulet Alpha   = skill Cybernetics needs 2 has 0
implant_1/High-grade Amulet Alpha   = skill Science needs 3 has 0
implant_2/High-grade Amulet Beta    = skill Cybernetics needs 2 has 0
implant_2/High-grade Amulet Beta    = skill Science needs 3 has 0
implant_4/High-grade Amulet Delta   = skill Cybernetics needs 3 has 0
implant_4/High-grade Amulet Delta   = skill Science needs 3 has 0
implant_5/High-grade Amulet Epsilon = skill Cybernetics needs 4 has 0
implant_5/High-grade Amulet Epsilon = skill Science needs 3 has 0
implant_3/High-grade Amulet Gamma   = skill Cybernetics needs 3 has 0
implant_3/High-grade Amulet Gamma   = skill Science needs 3 has 0
implant_6/High-grade Amulet Omega   = skill Cybernetics needs 5 has 0
implant_6/High-grade Amulet Omega   = skill Science needs 3 has 0
