tests/snapshots/regression-location_bonus_not_on_drones-skills_0.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                    = Scorpion
ship/upgradeFree                             = 100.000000
ship/scanStrength                            = 24.000000
ship/passiveShieldEffectiveRechargeRate      = 9.558621
ship/passiveShieldRechargeRate               = 6.930000
ship/ehp                                     = 29193.225100
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.137500
ship/armorKineticDamageEffectiveResonance    = 0.187500
ship/armorExplosiveDamageEffectiveResonance  = 0.225000
ship/armorEmDamageEffectiveResonance         = 0.125000
ship/shieldEhp                               = 9558.620572
ship/hullEhp                                 = 10671.641525
ship/armorEhp                                = 8962.963003
ship/shieldDamageEffectiveResonance          = 0.725000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.675000
ship/droneCapacityLoad                       = 25.000000
ship/droneActive                             = 5.000000
ship/powerFree                               = 9500.000000
ship/cpuFree                                 = 750.000000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 100.000000
ship/capacitorPeakDelta                      = 12.500000
ship/capacitorPeakRecharge                   = 12.500000
ship/alignTime                               = 16.659931
ship/shieldCapacity                          = 6930.000000
ship/shipBonus2AF                            = 0.000000
ship/shipBonusGC                             = 0.000000
ship/shipBonusCC                             = 0.000000
ship/shipBonusMB                             = 0.000000
ship/shipBonusCB                             = 0.000000
ship/shipBonusAB                             = 0.000000
ship/shipBonusMI                             = 0.000000
ship/shipBonusAI                             = 0.000000
ship/shipBonusCI                             = 0.000000
ship/shipBonusGI                             = 0.000000
ship/shipBonusCB3                            = 0.000000
ship/upgradeLoad                             = 300.000000
ship/droneBandwidthLoad                      = 25.000000
ship/shipBonusUF1                            = 0.000000
ship/shipBonusUF2                            = 0.000000
ship/shipBonusUC1                            = 0.000000
ship/shipBonusUC2                            = 0.000000
ship/shipBonusUB1                            = 0.000000
ship/shipBonusUB2                            = 0.000000
ship/shipBonusOreDestroyer1                  = 0.000000
ship/shipBonusOreDestroyer2                  = 0.000000
ship/shipBonusOreDestroyer3                  = 0.000000
ship/shipBonusSoEECS1                        = 0.000000
ship/shipBonusSoEECS2                        = 0.000000
ship/shipBonusSoEECS3                        = 0.000000
ship/shipBonusSoEECS4                        = 0.000000
ship/shipBonusSoEECS5                        = 0.000000
ship/shipBonusAB3                            = 0.000000

rig_1/type  = Large Particle Dispersion Augmentor II
rig_1/state = online

dronebay_1-5/type  = Hornet EC-300
dronebay_1-5/state = active

ship                   = resource LaunchedDrones 5.000000 of 0.000000
ship                   = skill Caldari Battleship needs 1 has 0
dronebay/Hornet EC-300 = skill Advanced Drone Avionics needs 1 has 0
dronebay/Hornet EC-300 = skill Electronic Warfare needs 4 has 0
dronebay/Hornet EC-300 = skill Drones needs 5 has 0
